# fmt

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/get_config/: rules.rs
crates/js-support/: Cargo.toml
crates/js-support/src/: lib.rs  syntax_kind.rs
crates/js-support/src/codegen/: generator.rs  mod.rs  visitor_impl.rs
crates/js-support/src/parser/: mod.rs
crates/js-support/src/rules/: expr_rules.rs  literal_rules.rs  mod.rs  rules.rs
crates/js-support/src/transform/: builder.rs  mod.rs  token_tree.rs
crates/js-support/src/traversal/: hooks.rs  mod.rs  visitor.rs  walk.rs
crates/js_parser/: Cargo.toml
crates/js_parser/src/: ast.rs  lex.rs  lib.rs  syntax_kind.rs
crates/js_parser/src/ast/: node.rs
crates/js_parser/src/lex/: lexed.rs  token_stream.rs  type_judgument.rs
crates/middlewares/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lex.rs  lib.rs  syntax_kind.rs
crates/parser/src/ast/: ast_node.rs  node.rs  (+4 more)
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  parser_combiner.rs  utils.rs
crates/test_item/: Cargo.toml
dev_tools/parser_generator/: Cargo.toml
dev_tools/rgt/: Cargo.toml
dev_tools/rgt/src/: green.rs  lib.rs  red.rs  syntax_kind.rs
dev_tools/tokenizer/src/: a.toml  main.rs  refff.js
dev_tools/visual_ast/: Cargo.toml
docs/CHANGELOG/: 10-12.md  10-18.md  10-19.md  10-22.md  10-23.md  10-25.md  10-27.md  11-1.md  11-10.md  11-2.md  11-3.md  11-4.md  11-6.md  11-7.md  11-8.md  11-9.md  20-28.md  20-29.md
lib/t/: Cargo.toml
(+74 files in other folders)
