[package]
name = "fmt"
version = "0.1.0"
authors = ["Ethan Teng"]
edition = "2021"
description = "A high-performance code formatting tool"
readme = "README.md"
repository = "https://github.com/tim101010101/fmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["crates/*", "lib/*"]